# UnderstandingVCS

./: .gitignore  BUG_BISECTION_METHODOLOGY.md  CLAUDE.md  LICENSE  P3I_G_THREADING_PLAN.md  P3I_PLAN.md  PORTING_PLAN.md  PORT_OBJECT_RENDER_PLAN.md  PROBING_PLAN_RENDER.md  README.md  RENDER_DIVERGENCE_SYNTHESIS.md  RESULTS.md  STATUS.md  bug_fix_log.md
docs/: README.md  build_assets.py  build_pages.py  cell_footprints.jl  (+90 more)
jaxtari/: README.md  jaxtari_cpu.py  pyproject.toml
jaxtari/jaxtari/: __init__.py  console.py  types.py
jaxtari/jaxtari/bus/: __init__.py  system.py
jaxtari/jaxtari/cart/: __init__.py  system.py
jaxtari/jaxtari/cpu/: __init__.py  addressing.py  alu.py  m6502.py  tables.py
jaxtari/jaxtari/diff/: __init__.py  modes.py  rom_as_weights.py  soft_branch.py  soft_mem.py  soft_select.py  soft_state.py  soft_step.py  soft_tia.py  straight_through.py
jaxtari/jaxtari/env/: __init__.py  stella_environment.py
jaxtari/jaxtari/games/: __init__.py  atari_classics.py  breakout.py  joystick_starts.py  more_games.py  pong.py  rom_settings.py  space_invaders.py
jaxtari/jaxtari/io/: __init__.py  action.py
jaxtari/jaxtari/riot/: __init__.py  system.py
jaxtari/jaxtari/tia/: __init__.py  system.py
jaxtari/jaxtari/xai/: __init__.py  integrated_gradients.py  occlusion.py
jaxtari/tests/: conftest.py  scratch_cycle_audit.py  test_breakout_auto_reset_terminal.py  test_breakout_ball_death.py  test_bus.py  test_cart.py  test_cpu_p1a.py  test_cpu_p1b.py  test_cpu_p1b2.py  test_cpu_p1c.py  test_cpu_p1d.py  test_cpu_p1e.py  test_cpu_p1f.py  test_diff.py  test_p1h_soft.py  test_p1h_undocumented.py  test_p3g_nusiz.py  test_p3h_vdel.py  test_p3i_render_pixel.py  test_p3j_audio.py  test_p3l_priority.py  test_p4c_paddle.py  test_p5b_f8sc.py  test_p5c_e0.py  test_p6.py  test_p6c_arcade_games.py  test_p6c_classics.py  test_p6c_more_games.py  test_p6c_pong.py  test_p7b.py  test_p7c_a.py  test_p7c_b.py  test_p7c_bx.py  test_p7c_c.py  test_p7c_d.py  test_p7c_dx.py  test_p7c_e.py  test_p7c_f.py  test_p7d.py  test_p7f_a.py  (+23 more)
(+506 files in other folders)
