[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "jaxtari"
version = "0.0.1"
description = "Differentiable JAX port of xitari for XAI on the Atari 2600 VCS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-only" }
authors = [{ name = "akmaier" }]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-xdist",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["jaxtari"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
