[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "jaxtari"
version = "0.0.1"
description = "Differentiable JAX port of xitari for XAI on the Atari 2600 VCS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-only" }
authors = [{ name = "akmaier" }]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-xdist",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["jaxtari"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-n auto` (pytest-xdist) parallelises tests across CPU cores. On an
# 8-core machine the long PXC1/PXC2 sweep (~10 min serial) drops to
# ~2 min. Each worker gets its own JAX runtime so they don't share
# the JIT cache — first-test overhead per worker is ~3 s but
# amortises away for any non-trivial test count. Override with
# `pytest -n 1` to debug deterministically.
# `--dist loadgroup` keeps tests within a `@pytest.mark.xdist_group`
# co-scheduled on one worker (used for PXC2 fixtures that share a
# common setup file).
addopts = "-q -n auto --dist worksteal"

[tool.ruff]
line-length = 100
target-version = "py310"
